--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 *.dylib
 
 # Server
-/go/bin/*
+go/bin/*
 go/pkg/**/
 go/src/github.com/**/
+go/src/gopkg.in/**/
+
 
 # Test binary, built with `go test -c`
 *.test
