--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ go/pkg/
 go/src/*
 !go/src/app/
 !go/src/config/
-!go/src/modules/
+!go/src/models/
 
 # Test binary, built with `go test -c`
 *.test
